new menu for large and medium fonts

--- a/menu_ja.lang
+++ b/menu_ja.lang
@@ -196,7 +196,7 @@
     "game-world-generators": "ワールド生成",
     "gameplay": "ゲームプレイ・テンプレート",
     "gameplay-info": "’モジュール’をクリックするとさらにカスタマイズできる",
-    "host-multiplayer-game": "ゲームをホスト",
+    "host-multiplayer-game": "ゲームのホスト",
     "identity-export": "マルチプレイIDをエクスポート",
     "identity-export-fail": "IDのエクスポートに失敗しました",
     "identity-export-ok": "%d IDを%sにエクスポートに成功しました",
@@ -255,7 +255,7 @@
     "multi-world-warning": "警告: 多重ワールドは終わってません,最後に選択されたワールドのみ利用可能です!",
     "music-volume": "音量",
     "new-binding": "新しいバインディング",
-    "new-game-title": "ニュー・ゲーム",
+    "new-game-title": "新規のゲーム",
     "next-toolbar-item": "次のツールバー・アイテム",
     "none": "無し",
     "not-bound": "バインドされていません",
@@ -320,13 +320,13 @@
     "screenshot-size-half": "半分",
     "screenshot-size-normal": "ノーマル",
     "screenshot-size-quarter": "1/4",
-    "select-game-title": "ゲームをセレクト",
+    "select-game-title": "ゲームの選択",
     "select-modules": "モジュール...",
     "select-modules-title": "モジュールを選択...",
     "select-modules-filter-reset": "カテゴリ・フィルタをリセット",
     "select-modules-filter-title": "モジュール・カテゴリ",
     "select-multiplayer-game-sub-title": "マルチ・プレイヤー",
-    "select-record": "ゲーム・レコード",
+    "select-record": "ゲームの記録",
     "select-replay": "リプレイ・ライブラリ",
     "select-singleplayer-game-sub-title": "シングル・プレイヤー",
     "select-world-gen": "ワールド・ジェネレータを選択",
@@ -386,8 +386,8 @@
     "telemetry-launch-popup-title": "テラソロジの遠隔測定",
     "telemetry-menu": "テレメトリ・メニュー",
     "telemetry-description": "この画面にはサーバーに送信される測定結果とその値が表示されます。ここで有効/無効にすることができます。これらのテレメトリは私たちのようなボランティア・プロジェクトにとって非常に有用です。ご協力に感謝しています!",
-    "telemetry-block-destroyed": "ブロック・ディストロイ",
-    "telemetry-block-placed": "ブロック・プット",
+    "telemetry-block-destroyed": "ブロックの破壊",
+    "telemetry-block-placed": "ブロックの配置",
     "telemetry-game-configuration": "セッティング",
     "telemetry-game-play": "ゲームプレイ",
     "telemetry-creature-killed": "クリーチャー・キル",
@@ -396,7 +396,7 @@
     "this-language-English": "Japanese",
     "this-language-native": "日本語",
     "universe-setup": "全体の設定",
-    "universe-setup-description": 新しいワールドをドロップダウンから選んで設定したとき、ワールドジェネレータを選択し追加してください。",
+    "universe-setup-description": "新しいワールドをドロップダウンから選んで設定したとき、ワールドジェネレータを選択し追加してください。",
     "update-module": "アップデート",
     "time-progression-during-pre-generation": "事前生成中の時間経過",
     "validation-username-max-length": "ユーザーネームは100文字以上長くできません",
